# nerdvana

./: .gitignore  .pre-commit-config.yaml  package-lock.json  package.json  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: c81c91b84035_create_platform_user_table.py
backend/: config.py  database.py  main.py  models.py  oauth2.py  schemas.py
backend/routers/user/: router.py  schemas.py
backend/services/: email.py  otp.py
backend/services/crud/: user.py
backend/services/utils/: hashing.py
src/api/: axios.ts  queryClient.ts
src/api/endpoints/: users.ts
src/components/auth/: LoginForm.tsx  OtpVerification.tsx  SignupForm.tsx
src/components/layouts/: AuthLayout.tsx
src/components/ui/: logo.tsx
src/hooks/auth/: useLogin.ts  useSignup.ts
src/lib/: utils.ts
src/pages/: _document.tsx  index.tsx
src/pages/about/me/: index.tsx
src/pages/login/: index.tsx
src/pages/signup/: index.tsx
src/styles/: globals.css
